--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,10 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+a {
+  text-decoration: none;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
